kubernetes/kustomizations/blog/overlays/prod/deployment-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zmuda-pro-blog
spec:
  replicas: 2
