kubernetes/kustomizations/blog/overlays/prod/ingress-metadata.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zmuda-pro-blog
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "e48d5ef2-41f9-4ca5-a8bf-f60af8d77921.cfargotunnel.com"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-cloudflare@kubernetescrd"
  labels:
    dns-type: external
